--- a/common/common.scss
+++ b/common/common.scss
@@ -122,9 +122,9 @@ a {
     box-shadow: 0px 2px 3px 0px rgba(2, 47, 57, 0.14);
     .category-box-inner {
       border: none;
-      padding: 0;
+      padding: 1em 2em; // E&U
       .category-details {
-        padding: 2em;
+        padding: 0; // E&U
       }
     }
     &:hover {
@@ -381,5 +381,22 @@ summary.select-kit-header.single-select-header.dropdown-select-box-header {
   .search-banner,
   .showcased-topic-list {
     display: block;
+  }
+}
+
+
+
+
+
+/************************************/
+/***********     E&U     ************/
+/************************************/
+.category-boxes {
+  .category-box {
+    .logo.aspect-image {
+      img {
+        margin: 0 auto;
+      }
+    }
   }
 }
