--- a/common/common.scss
+++ b/common/common.scss
@@ -147,9 +147,9 @@ a {
     box-shadow: 0px 2px 3px 0px rgba(2,47,57,.14);
     .category-box-inner {
       border: none;
-      padding: 0;
+      padding: 1em 2em; // E&U
       .category-details {
-        padding: 2em;
+        padding: 0; // E&U
       }
     }
     &:hover {
@@ -371,5 +371,22 @@ summary.select-kit-header.single-select-header.dropdown-select-box-header {
   }
   .search-advanced-filters {
     border: 1px dashed var(--tertiary);
+  }
+}
+
+
+
+
+
+/************************************/
+/***********     E&U     ************/
+/************************************/
+.category-boxes {
+  .category-box {
+    .logo.aspect-image {
+      img {
+        margin: 0 auto;
+      }
+    }
   }
 }
