--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -4,8 +4,9 @@
 
 $color-white: #ffffff;
 $color-black: #000000;
-$color-box-shadow: #65a797;
-$color-mint: #75BDAD;
+$color-box-shadow: #95c11f;
+$color-mint: #00a188;
 $color-blue: #e5f8ff;
+$tertiary: #78ba33;
 $color-square-gradient: linear-gradient(4deg, rgba(143,236,202,.29) 55%, rgba(74, 247, 255, 0.08) 100%);
 $color-square-webkit-gradient: -webkit-linear-gradient(4deg, rgba(143,236,202,.29) 55%, rgba(74, 247, 255, 0.08) 100%);
