--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -11,6 +11,8 @@
   --mint-hover-shadow: 4px 4px var(--tertiary-high);
   --mint-color-mint: #75bdad; // E&U: #00a188 ?
   --mint-color-blue: #e5f8ff;
+  --mint-color-primary-light: #454545; // check E&U ?
+  --mint-color-secondary-light: #f6fbfc; // check E&U ?
 }
 
 $color-square-gradient: linear-gradient(
