Fix couleur titres de la page d'accueil

--- a/common/common.scss
+++ b/common/common.scss
@@ -67,6 +67,11 @@ input[type="color"]:focus,
     .header-wrapper {
       color: var(--primary);
       background-color: transparent;
+	  a {
+		h2 {
+          color: var(--tertiary);
+		}
+	  }
       .btn-primary {
         display: none;
       }
