--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -17,6 +17,8 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   }
 }
 
+// Modif E&R: suppression des gros carres et ronds du background
+/*
 #main-outlet:after {
   content: "";
   display: block;
@@ -45,3 +47,4 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   transform: rotate(74deg);
   transform-origin: 0 100%;
 }
+*/
