--- a/common/common.scss
+++ b/common/common.scss
@@ -3,7 +3,7 @@
 @import "chat";
 
 :root {
-  --tertiary: #78ba33; // E&U ?
+  --tertiary: #4D1D82; // E&T
 }
 
 .d-editor-textarea-wrapper,
@@ -34,7 +34,7 @@
     padding: 2em 2em 1em;
     border-top: 8px solid var(--tertiary);
     box-shadow: 0 8px 60px 0 rgba(103, 151, 255, 0.1),
-      0 12px 90px 0 rgba(133, 255, 103, 0.1);
+      0 12px 90px 0 rgba(237, 232, 242, 0.8); // E&T rgba
     .header-wrapper {
       background-color: transparent;
       a h2 {
@@ -80,7 +80,7 @@
   .container.list-container {
     border-radius: var(--mint-border-radius);
     box-shadow: 0 8px 60px 0 rgba(103, 151, 255, 0.1),
-      0 12px 90px 0 rgba(133, 255, 103, 0.1);
+      0 12px 90px 0 rgba(237,232,242, 0.8); // E&T rgba
     padding: 2em;
     @include mint-card-bg;
     border-top: 8px solid var(--tertiary);
