--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -3,10 +3,9 @@
 body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   border-radius: var(--mint-border-radius);
   box-shadow: 0 8px 60px 0 rgba(103, 151, 255, 0.1),
-    0 12px 90px 0 rgba(133, 255, 103, 0.1);
+    0 12px 90px 0 rgba(237, 232, 242, 0.8); // E&T rgba
   padding: 2em;
   @include mint-card-bg;
-  // background-color: var(--header_background); // E&U ?
   border-top: 8px solid $tertiary;
   margin-top: 1em;
 }
